Exclude all model weight files (.pt, .pth, .npy) from repository
- Updated .gitignore to exclude *.pt, *.pth, *.npy files
- Removed all model weight files from git tracking (kept locally)
- This reduces repository size significantly for GitHub push
- Model files remain in local outputs/ folder for reference

--- a/.gitignore
+++ b/.gitignore
@@ -115,10 +115,7 @@ venv.bak/
 ehthumbs.db
 Thumbs.db
 
-# Large model files (keep in outputs but exclude from git if too large)
-# Uncomment if needed:
-# *.pt
-# *.pth
-# *.npy
-# Large model files (>100MB)
-outputs/03_1_SimCLR_Pretraining/simclr_best_checkpoint.pth
+# Large model files (keep in outputs but exclude from git)
+*.pt
+*.pth
+*.npy
